Created the card.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <main>
       <h1>Create Your Account</h1>
-      <form method="get" action="play.html">
+      <form method="get" action="card.html">
         <div>
           <input type="text" placeholder="✉ Email" />
         </div>
