Created the social.html

--- a/deck.html
+++ b/deck.html
@@ -46,7 +46,7 @@
         <menu>
             <li><a href="card.html"> <img src="Resources/card_icon.png" width="40"></a></li>
             <li><a href="deck.html"> <img src="Resources/deck_icon.png" width="45"></a></li>
-            <li><a href="socail.html"> <img src="Resources/socail_icon.png" width="50"></a></li>
+            <li><a href="social.html"> <img src="Resources/socail_icon.png" width="50"></a></li>
         </menu>
       </nav>
     </footer>
