Added the username display to socail. Also added descriptions of what I did to README

--- a/social.html
+++ b/social.html
@@ -13,6 +13,9 @@
 
     <main>
         <span>👤Mystery User</span>
+        <span>
+            <button>✎New post</button>
+        </span>
 
         <div class="social-feed">
         
