Added the buttons to use a card, and to see unposted cards

--- a/deck.html
+++ b/deck.html
@@ -13,6 +13,7 @@
 
     <main>
         <div class="date-deck">
+
             <div class="date-card">
                 <h3 class="card-number">1❤︎</h3>
                 <h3 class="card-title">Go to the Arcade!</h3>
@@ -23,8 +24,13 @@
                     <span>Cheap</span>
                     <span>Exciting</span>
                 </div>
+                <span>
+                    <button>Use card</button>
+                </span>
             </div>
+            
             <button>Swipe -></button>
+
             <div class="date-card">
                 <h3 class="card-number">2❤︎</h3>
                 <h3 class="card-title">Ice skating!</h3>
