--- a/social.html
+++ b/social.html
@@ -12,9 +12,9 @@
     </header>
 
     <main>
-        <span>👤Mystery User</span>
-        <span>
+        <span>👤Mystery User
             <button>✎New post</button>
+            <button>See your unposted cards</button>
         </span>
 
         <div class="social-feed">
