created the css for the card home page

--- a/card.html
+++ b/card.html
@@ -1,30 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DateDeck</title>
+
+    <link rel="stylesheet" href="card.css" />
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+
   </head>
   <body>
+
     <header>
-      <img src = "Resources/titledatedeck.png" width = 200>
-      <hr />
+      <a href="index.html">
+      <img src = "Resources/titledatedeck.png" width = 200 class = "mx-auto d-block">
+      </a>
     </header>
 
-    <main>
-      <img src="Resources/datecard.png" width = 200>
-      <p>Click to add a date to your deck!</p>
+    <main class="d-flex justify-content-center align-items-center text-center flex-grow-1 pb-5">
+      <div>
+        <button class="card-button">
+          <img src="Resources/datecard.png" class="card-img d-block mx-auto" style="height: 50vh;">
+        </button>
+        <p class="mt-2" style="font-size: large;">Click to add a date to your deck!</p>
+      </div>
     </main>
 
-    <footer>
-      <hr />
+
+    <footer class="fixed-bottom border-top" style="height: 70px;">
       <nav>
-        <menu>
-            <li><a href="card.html"> <img src="Resources/card_icon.png" width="40"></a></li>
-            <li><a href="deck.html"> <img src="Resources/deck_icon.png" width="45"></a></li>
-            <li><a href="social.html"> <img src="Resources/socail_icon.png" width="50"></a></li>
-        </menu>
+          <ul class="d-flex justify-content-around align-items-center m-0 p-2 list-unstyled" style="max-width: 400 px; width: 100%;">
+            <li><a href="card.html"> <img src="Resources/card_icon_active.png" height="50" class="card-icon"></a></li>
+            <li><a href="deck.html"> <img src="Resources/deck_icon.png" height="50"></a></li>
+            <li><a href="social.html"> <img src="Resources/socail_icon.png" height="50" class="p-1"></a></li>
+          </ul>
       </nav>
     </footer>
+
   </body>
 </html>
