--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>DateDeck</title>
 
     <link rel="stylesheet" href="index.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
     <!-- Include bootstrap CSS framework -->
     <link
@@ -22,7 +21,7 @@
   <body>
 
     <header class = "container-fluid">
-      <img src = "Resources/datedeck.png" width = 200 class = "mx-auto d-block mb-5">
+      <img src = "Resources/datedeck.png" width = 200 class = "mx-auto d-block mb-5 py-1">
     </header>
 
     <main class = text-center>
