major finishes for socail posts

--- a/deck.html
+++ b/deck.html
@@ -67,14 +67,15 @@
                 </div>
                 <h3 class="bottom-card-number">w-100</h3>
             </div>
-
         </div>
-        <button>⊞ View all cards</button>
+        <div class="all-cards-btn">
+          <button>View all cards</button>
+        </div>
     </main>
 
-    <footer class="fixed-bottom border-top" style="height: 70px;">
+    <footer>
       <nav>
-          <ul class="d-flex justify-content-around align-items-center m-0 p-2 list-unstyled" style="max-width: 400 px; width: 100%;">
+          <ul class="footer-nav">
             <li><a href="card.html"> <img src="Resources/card_icon.png" height="50" class="card-icon"></a></li>
             <li><a href="deck.html"> <img src="Resources/deck_icon_active.png" height="50"></a></li>
             <li><a href="social.html"> <img src="Resources/socail_icon.png" height="50" class="p-1"></a></li>
