--- a/card.html
+++ b/card.html
@@ -34,9 +34,9 @@
     </main>
 
 
-    <footer class="fixed-bottom border-top" style="height: 70px;">
+    <footer>
       <nav>
-          <ul class="d-flex justify-content-around align-items-center m-0 p-2 list-unstyled" style="max-width: 400 px; width: 100%;">
+          <ul class="footer-nav">
             <li><a href="card.html"> <img src="Resources/card_icon_active.png" height="50" class="card-icon"></a></li>
             <li><a href="deck.html"> <img src="Resources/deck_icon.png" height="50"></a></li>
             <li><a href="social.html"> <img src="Resources/socail_icon.png" height="50" class="p-1"></a></li>
