Final changes as detail adjustments

--- a/social.html
+++ b/social.html
@@ -83,9 +83,9 @@
     <footer>
       <nav>
           <ul class="footer-nav">
-            <li><a href="card.html"> <img src="Resources/card_icon.png" height="50" class="card-icon"></a></li>
-            <li><a href="deck.html"> <img src="Resources/deck_icon.png" height="50"></a></li>
-            <li><a href="social.html"> <img src="Resources/socail_icon_active.png" height="50" class="p-1"></a></li>
+            <li><a href="card.html"> <img src="Resources/card_icon.png" width="50"></a></li>
+            <li><a href="deck.html"> <img src="Resources/deck_icon.png" width="50"></a></li>
+            <li><a href="social.html"> <img src="Resources/socail_icon_active.png" width="50"></a></li>
           </ul>
       </nav>
     </footer>
