--- a/deck.html
+++ b/deck.html
@@ -69,16 +69,16 @@
             </div>
         </div>
         <div class="all-cards-btn">
-          <button>View all cards</button>
+          <button class="custom-btn">View all cards</button>
         </div>
     </main>
 
     <footer>
       <nav>
           <ul class="footer-nav">
-            <li><a href="card.html"> <img src="Resources/card_icon.png" height="50" class="card-icon"></a></li>
-            <li><a href="deck.html"> <img src="Resources/deck_icon_active.png" height="50"></a></li>
-            <li><a href="social.html"> <img src="Resources/socail_icon.png" height="50" class="p-1"></a></li>
+            <li><a href="card.html"> <img src="Resources/card_icon.png" width="50"></a></li>
+            <li><a href="deck.html"> <img src="Resources/deck_icon_active.png" width="50"></a></li>
+            <li><a href="social.html"> <img src="Resources/socail_icon.png" width="50"></a></li>
           </ul>
       </nav>
     </footer>
