finishing routing and fixing html notation

--- a/src/login/login.html
+++ b/src/login/login.html
@@ -27,7 +27,7 @@
     <main class = text-center>
       <h1 class="mb-4">Create Your Account</h1>
 
-      <form method="get" action="card.html" class="mx-auto">
+      <form method="get" action="card.html" class="mx-auto" style="max-width: 350px;">
 
         <div class="form-floating mb-3">
           <input type="email" placeholder="✉ Email" class="form-control" id="email"/>
